[gd_scene load_steps=16 format=2]

[ext_resource path="res://sprites/tutorial_down.png" type="Texture" id=1]
[ext_resource path="res://sprites/background.png" type="Texture" id=2]
[ext_resource path="res://sprites/start_up.png" type="Texture" id=3]
[ext_resource path="res://sprites/start_down.png" type="Texture" id=4]
[ext_resource path="res://sprites/tutorial_up.png" type="Texture" id=5]
[ext_resource path="res://sprites/start_button_up.png" type="Texture" id=6]
[ext_resource path="res://scenes/menu/menu/Menu.gd" type="Script" id=7]
[ext_resource path="res://sprites/gui/AUTHORS D E.png" type="Texture" id=8]
[ext_resource path="res://sprites/gui/AUTHORS L E.png" type="Texture" id=9]
[ext_resource path="res://sprites/gui/GENER D E.png" type="Texture" id=10]
[ext_resource path="res://sprites/gui/GENER L E.png" type="Texture" id=11]
[ext_resource path="res://sprites/gui/SKINS D E.png" type="Texture" id=12]
[ext_resource path="res://sprites/gui/SKINS L E.png" type="Texture" id=13]
[ext_resource path="res://sprites/gui/SETT L E.png" type="Texture" id=14]
[ext_resource path="res://sprites/gui/SETT D E.png" type="Texture" id=15]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="Start" type="Button" parent="."]
visible = false
margin_left = 120.0
margin_top = 48.0
margin_right = 1187.0
margin_bottom = 566.0
text = "Start"
icon = ExtResource( 6 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 269.0
margin_top = 20.0
margin_right = 370.0
margin_bottom = 339.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/VBoxContainer"]
margin_right = 101.0
margin_bottom = 14.0
max_value = 8.0
step = 1.0

[node name="Start" type="TextureButton" parent="MarginContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 101.0
margin_bottom = 59.0
rect_min_size = Vector2( 101, 41 )
size_flags_horizontal = 5
size_flags_vertical = 5
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
expand = true

[node name="Turorial" type="TextureButton" parent="MarginContainer/VBoxContainer"]
margin_top = 63.0
margin_right = 101.0
margin_bottom = 104.0
rect_min_size = Vector2( 101, 41 )
size_flags_horizontal = 5
size_flags_vertical = 5
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 1 )
expand = true

[node name="Authors" type="TextureButton" parent="MarginContainer/VBoxContainer"]
margin_top = 108.0
margin_right = 101.0
margin_bottom = 149.0
rect_min_size = Vector2( 101, 41 )
size_flags_horizontal = 5
size_flags_vertical = 5
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 8 )
expand = true

[node name="BestRes" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 153.0
margin_right = 101.0
margin_bottom = 184.0
grow_horizontal = 2
grow_vertical = 2
text = "Best result
0"
align = 1

[node name="Generator" type="TextureButton" parent="MarginContainer/VBoxContainer"]
margin_top = 188.0
margin_right = 101.0
margin_bottom = 229.0
rect_min_size = Vector2( 101, 41 )
size_flags_horizontal = 5
size_flags_vertical = 5
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 10 )
expand = true

[node name="Skins" type="TextureButton" parent="MarginContainer/VBoxContainer"]
margin_top = 233.0
margin_right = 101.0
margin_bottom = 274.0
rect_min_size = Vector2( 101, 41 )
size_flags_horizontal = 5
size_flags_vertical = 5
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 12 )
expand = true

[node name="Settings" type="TextureButton" parent="MarginContainer/VBoxContainer"]
margin_top = 278.0
margin_right = 101.0
margin_bottom = 319.0
rect_min_size = Vector2( 101, 41 )
size_flags_horizontal = 5
size_flags_vertical = 5
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 15 )
texture_hover = ExtResource( 15 )
expand = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Turorial" to="." method="_on_Turorial_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Authors" to="." method="_on_Authors_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Generator" to="." method="_on_Generator_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Skins" to="." method="_on_Skins_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
